registry/registry-deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: default
spec:
  selector:
    app: app-registry
  ports:
    - name: http
      port: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: default   
spec:
  selector:
    matchLabels:
      app: app-registry
  template:
    metadata:
      labels:
        app: app-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /var/lib/registry
          name: registry-data
        - mountPath: /etc/docker/registry/config.yml
          name: registry-config
      - name: registry-ui
        image: joxit/docker-registry-ui:static
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx/.env
          name: nginx-config
      volumes:
      - name: registry-data
        hostPath:
          path: /opt/registry/data
      - name: registry-config
        hostPath:
          path: /opt/registry/config/config.yml
      - name: nginx-config
        hostPath:
          path: /opt/registry/config/nginx.env
      nodeSelector:
        IngressProxy: "true"
